Bug fixes. Made castling fully functional, also created a switch for all move types, so that all special moves like castling and enpassant are in the same place. Fixed the cursor on drag, the dragged piece will now center behind the cursor. Created a bettter folder structure, started working on the players and the pieces they have taken. TODO check for checkmate and stalemate.

--- a/src/styles.css
+++ b/src/styles.css
@@ -52,6 +52,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: var(--background-color);
+    color: hsla(0,0%,100%,.65);
 }
 
 main {
@@ -60,52 +61,46 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
 }
 
 button {
     background: 0;
     border: 0;
     outline: 0;
-    padding: 0 5px;
 
-    font-family: ChessGlyph;
+    font-family: ChessGlyph, sans-serif;
     font-size: calc(4vmin);
-    color: hsla(0,0%,100%,.65);
-
+    color: inherit;
     cursor: pointer;
 }
 
-/*Board*/
-#board-wrapper {
-    position: relative;
-    width: 90vh;
+#content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    gap: calc(1vmin);
 }
 
-#board-wrapper:before {
-    content: "";
-    display: block;
-    padding-top: 100%;
+chess-player {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: calc(1vmin);
+}
+
+chess-player img {
+    height: calc(5vmin);
+    width: auto;
 }
 
 #board {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    width: calc(80vmin);
+    height: calc(80vmin);
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(8, 1fr);
     user-select: none;
-}
-
-#board-right {
-
-}
-
-#board-right-wrapper {
-
 }
 
 /*Squares*/
@@ -181,51 +176,51 @@ chess-hint.capture {
 }
 
 chess-pawn.black {
-    background-image: url("../assets/pieces/bp.png");
+    background-image: url("../assets/images/pieces/bp.png");
 }
 
 chess-pawn.white {
-    background-image: url("../assets/pieces/wp.png");
+    background-image: url("../assets/images/pieces/wp.png");
 }
 
 chess-knight.black {
-    background-image: url("../assets/pieces/bn.png");
+    background-image: url("../assets/images/pieces/bn.png");
 }
 
 chess-knight.white {
-    background-image: url("../assets/pieces/wn.png");
+    background-image: url("../assets/images/pieces/wn.png");
 }
 
 chess-bishop.black {
-    background-image: url("../assets/pieces/bb.png");
+    background-image: url("../assets/images/pieces/bb.png");
 }
 
 chess-bishop.white {
-    background-image: url("../assets/pieces/wb.png");
+    background-image: url("../assets/images/pieces/wb.png");
 }
 
 chess-rook.black {
-    background-image: url("../assets/pieces/br.png");
+    background-image: url("../assets/images/pieces/br.png");
 }
 
 chess-rook.white {
-    background-image: url("../assets/pieces/wr.png");
+    background-image: url("../assets/images/pieces/wr.png");
 }
 
 chess-queen.black {
-    background-image: url("../assets/pieces/bq.png");
+    background-image: url("../assets/images/pieces/bq.png");
 }
 
 chess-queen.white {
-    background-image: url("../assets/pieces/wq.png");
+    background-image: url("../assets/images/pieces/wq.png");
 }
 
 chess-king.black {
-    background-image: url("../assets/pieces/bk.png");
+    background-image: url("../assets/images/pieces/bk.png");
 }
 
 chess-king.white {
-    background-image: url("../assets/pieces/wk.png");
+    background-image: url("../assets/images/pieces/wk.png");
 }
 
 /*Hovers*/
